...
import br.com.usinasantafe.pcp.presenter.theme.PCPTheme
import br.com.usinasantafe.pcp.presenter.theme.TextButtonDesign
import br.com.usinasantafe.pcp.presenter.theme.TitleDesign
import br.com.usinasantafe.pcp.lib.FlowApp
import br.com.usinasantafe.pcp.lib.TypeMovEquip

const val TAG_OBSERV_TEXT_FIELD_PROPRIO = "tag_observ_text_field_proprio"

@Composable
fun ObservProprioScreen(
    viewModel: ObservProprioViewModel = hiltViewModel(),
    onNavDestino: () -> Unit,
    onNavNotaFiscal: () -> Unit,
...
